[gd_scene load_steps=2 format=3 uid="uid://c4ei5qhvpx1qf"]

[ext_resource type="Script" uid="uid://owskp6hxgtge" path="res://scenes/main_game/main_game.gd" id="1_s3esy"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_s3esy")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopBar" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 80.0

[node name="ProgressBar" type="ProgressBar" parent="UI/TopBar"]
layout_mode = 0
offset_left = 226.0
offset_right = 1151.0
offset_bottom = 78.0

[node name="LeftPanel" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 320.0
offset_bottom = 700.0

[node name="DiceRangeLabel" type="Label" parent="UI/LeftPanel"]
layout_mode = 2
offset_left = -8.0
offset_top = 270.0
offset_right = 143.0
offset_bottom = 346.0

[node name="PauseSettingsLabel" type="Label" parent="UI/LeftPanel"]
layout_mode = 2
offset_left = 160.0
offset_top = 274.0
offset_right = 307.0
offset_bottom = 349.0

[node name="PerkLabel" type="Label" parent="UI/LeftPanel"]
layout_mode = 2
offset_top = 14.0
offset_right = 132.0
offset_bottom = 233.0

[node name="ActivePerks" type="Label" parent="UI/LeftPanel"]
layout_mode = 0
offset_left = 190.0
offset_top = 14.0
offset_right = 322.0
offset_bottom = 233.0

[node name="CenterArea" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 500.0
offset_top = 300.0
offset_right = 750.0
offset_bottom = 600.0

[node name="RoundLabel" type="Label" parent="UI/CenterArea"]
layout_mode = 0
offset_left = -472.0
offset_top = 204.0
offset_right = -253.0
offset_bottom = 328.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="UI/CenterArea"]
layout_mode = 0
offset_left = -98.0
offset_top = 169.0
offset_right = 54.0
offset_bottom = 257.0
text = "Start Round"

[node name="RollButton" type="Button" parent="UI/CenterArea"]
layout_mode = 0
offset_left = 257.0
offset_top = 169.0
offset_right = 409.0
offset_bottom = 257.0
text = "Roll Dice"

[node name="RightPanel" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 942.0
offset_top = 180.0
offset_right = 1142.0
offset_bottom = 580.0

[node name="TimerLabel" type="Label" parent="UI/RightPanel"]
layout_mode = 2
offset_left = 14.0
offset_top = 116.0
offset_right = 163.0
offset_bottom = 194.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComingUpBox" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 448.0
offset_top = 126.0
offset_right = 848.0
offset_bottom = 426.0
